# permissionsnoop

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  permissionsnoop-probe.c
src/: bpf.rs  main.rs  utils.rs
src/bpf/: opensnoop.bpf.c  permissionsnoop.bpf.c
