[package]
name = "opensnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
libbpf-cargo = "0.12.0"

[dependencies]
anyhow = "1.0.65"
caps = "0.5.4"
clap = { version = "3.2.12", features = ["derive"] }
criterion = "0.5.1"
libbpf-rs = "0.18.0"
