[package]
name = "opensnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
libbpf-cargo = "0.20.1"

[dependencies]
anyhow = "1.0.71"
caps = "0.5.5"
clap = { version = "4.3.4", features = ["derive"] }
criterion = "0.5.1"
libbpf-rs = "0.20.1"
